--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -11,4 +11,5 @@
 @import '~ngx-toastr/toastr.css';
 @import 'vendor/toastr';
 
-@import "layout";
+@import "custom/layout";
+@import "custom/loading";
