--- a/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
@@ -32,7 +32,7 @@
       <div class="row align-items-center">
         <div class="col-md">
           <ol class="breadcrumb">
-            <app-breadcrumb></app-breadcrumb>
+            <kiwi-breadcrumb></kiwi-breadcrumb>
           </ol>
         </div>
         <div class="col-md">
