--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -1,7 +1,7 @@
 <div class="card card-accent-primary">
   <div class="card-header py-2">
     <div class="row align-items-center">
-      <div class="col-sm-7"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left">{{ tableTitle }}</h6></div>
+      <div class="col-sm-7"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left" [innerHTML]="tableTitle"></h6></div>
       <div class="col-sm mt-2 mt-sm-0">
         <input class="form-control" type="text" placeholder="Filter..." [(ngModel)]="filterValue" (keyup)="applyFilter()"/>
       </div>
@@ -79,6 +79,8 @@
             ngx-datatable-footer-template
             let-rowCount="rowCount"
             let-pageSize="pageSize"
+            let-selectedMessage="selectedMessage"
+            let-totalMessage="totalMessage"
             let-selectedCount="selectedCount"
             let-curPage="curPage"
             let-offset="offset"
