--- a/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="app-body">
-  <div class="app-body-background" *ngIf="appData.config.project.background" [style.backgroundImage]="'url(' + appData.config.project.background + ')'"></div>
+  <div class="app-body-background" *ngIf="appData.config.project.background"
+       [style.backgroundImage]="'url(' + appData.config.project.background + ')'"></div>
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
@@ -19,13 +20,15 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-user"></i></span>
                     </div>
-                    <input formControlName="email" type="email" class="form-control" placeholder="Email" (keyup)="error = null">
+                    <input formControlName="email" type="email" class="form-control" placeholder="Email"
+                           (keyup)="error = null">
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-lock"></i></span>
                     </div>
-                    <input formControlName="password" type="password" class="form-control" placeholder="Password" (keyup)="error = null">
+                    <input formControlName="password" type="password" class="form-control" placeholder="Password"
+                           (keyup)="error = null">
                   </div>
                   <div class="text-right">
                     <button type="submit" class="btn btn-primary px-4 btn-block" [disabled]="!form.valid">Login</button>
