--- a/projects/kiwi-suite/ngx-admin/src/lib/views/translation/list/translation-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/translation/list/translation-list.component.html
@@ -1,6 +1,7 @@
 <kiwi-content>
   <ng-container *ngIf="dataUrl">
-    <kiwi-datatable [tableTitle]="'Translation Catalogue: <b>' + catalogueId + '</b>'" [apiUrl]="dataUrl" [columns]="columns" (updatedData)="setColumns($event)"></kiwi-datatable>
+    <kiwi-datatable [tableTitle]="'Translation Catalogue: <b>' + catalogueId + '</b>'" [apiUrl]="dataUrl"
+                    [columns]="columns" (updatedData)="setColumns($event)"></kiwi-datatable>
   </ng-container>
 
   <ng-template #buttonColumnTemplate let-row="row" let-value="value" let-i="index">
