--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -2,6 +2,15 @@
   padding: 0 25px;
 }
 
+.app-footer {
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  @include media-breakpoint-down(sm) {
+    display: block;
+  }
+}
+
 .header-email {
   max-width: 30vw;
   white-space: nowrap;
