--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -117,7 +117,7 @@
     </ng-container>
     <ng-template #isLoading>
       <div class="text-center my-3 loading">
-        <kiwi-loading class="block"></kiwi-loading>
+        <kiwi-loading class="big-center"></kiwi-loading>
       </div>
     </ng-template>
   </div>
