--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_loading.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_loading.scss
@@ -11,6 +11,16 @@ $kiwi-loading-light: #fff !default;
   }
 }
 
+kiwi-loading.big-center {
+  font-size: 25px;
+  display: block;
+
+  .kiwi-loading {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 .kiwi-loading {
   display: inline-block;
   width: 1em;
