--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-media-list/kiwi-media-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-media-list/kiwi-media-list.component.html
@@ -1,39 +1,58 @@
-<ng-container *ngIf="data$ | async as data; else isLoading">
-
-  <div class="row">
-    <div class="col-xl-2 col-lg-3 col-md-3 col-sm-4 col-12" *kiwiCan="['admin.api.' + resourceKey + '.upload']">
-      <div ng2FileDrop [uploader]="uploader">
-        <div class="upload-container">
-          <div class="drop-box">
-            <div class="upload-center">
-              <button class="btn btn-primary" type="button">Choose a file</button>
-              <p>or drag it here</p>
-            </div>
-            <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div *ngFor="let media of data.items" class="col-xl-2 col-lg-3 col-md-3 col-sm-4 col-12">
-      <div class="media-container" (click)="selectMedia(media)">
-        <ng-container *ngIf="isImage(media.mimeType); else noImage">
-          <div class="media-image" [ngStyle]="{backgroundImage: 'url(' + media.thumb + ')'}"></div>
-          <div class="media-image-title">{{ media.filename }}</div>
-        </ng-container>
-        <ng-template #noImage class="media-container">
-          <div class="media-icon">
-            <span [class]="'file-icon fa fa-5x fa-fw ' + mimeTypeIcon(media.mimeType)"></span>
-          </div>
-          <div class="media-image-title">{{ media.filename }}</div>
-        </ng-template>
+<div class="card card-accent-primary">
+  <div class="card-header py-2">
+    <div class="row align-items-center">
+      <div class="col-sm-7"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left">Media Files</h6></div>
+      <div class="col-sm mt-2 mt-sm-0">
+        <input class="form-control" type="text" placeholder="Filter..." [(ngModel)]="filterValue"
+               (keyup)="applyFilter()"/>
       </div>
     </div>
   </div>
-</ng-container>
-<ng-template #isLoading>
-  <kiwi-loading class="big-center"></kiwi-loading>
-</ng-template>
+  <div class="card-body p-0">
+    <ng-container *ngIf="data$ | async as data; else isLoading">
+
+      <div class="media-grid">
+        <div *kiwiCan="['admin.api.' + resourceKey + '.upload']">
+          <div ng2FileDrop [uploader]="uploader">
+            <div class="upload-container">
+              <div class="drop-box">
+                <div class="upload-center">
+                  <button class="btn btn-primary" type="button">Choose a file</button>
+                  <p>or drag it here</p>
+                </div>
+                <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngFor="let media of data.items">
+          <div class="media-container" (click)="selectMedia(media)">
+            <ng-container *ngIf="isImage(media.mimeType); else noImage">
+              <div class="media-image" [ngStyle]="{backgroundImage: 'url(' + media.thumb + ')'}"></div>
+              <div class="media-image-title">
+                <div>{{ media.filename }}</div>
+              </div>
+            </ng-container>
+            <ng-template #noImage class="media-container">
+              <div class="media-icon">
+                <span [class]="'file-icon fa fa-5x fa-fw ' + mimeTypeIcon(media.mimeType)"></span>
+              </div>
+              <div class="media-image-title">
+                <div>{{ media.filename }}</div>
+              </div>
+            </ng-template>
+          </div>
+        </div>
+      </div>
+
+      <kiwi-pagination [itemsPerPage]="itemsPerPage" [totalItems]="totalItems" [currentPage]="currentPage" (pageChanged)="onPage($event)"></kiwi-pagination>
+    </ng-container>
+    <ng-template #isLoading>
+      <kiwi-loading class="big-center"></kiwi-loading>
+    </ng-template>
+  </div>
+</div>
 
 <!--
 <ng-container *ngIf="data$ | async as data">
