--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
@@ -69,6 +69,8 @@
     align-items: center;
 
     & > div {
+      width: 100%;
+      text-align: center;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
