--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
@@ -24,6 +24,19 @@
     }
   }
 
+  .progress-bar-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+
+    .progress,
+    .progress-bar {
+      border-radius: 0;
+    }
+  }
+
   .media-image {
     position: absolute;
     top: 0;
