--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -3,8 +3,7 @@
     <div class="row align-items-center">
       <div class="col-sm-7"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left" [innerHTML]="tableTitle"></h6></div>
       <div class="col-sm mt-2 mt-sm-0">
-        <input class="form-control" type="text" placeholder="Filter..." [(ngModel)]="filterValue"
-               (keyup)="applyFilter()"/>
+        <input class="form-control" type="text" placeholder="Filter..." [(ngModel)]="filterValue" (keyup)="applyFilter()"/>
       </div>
     </div>
   </div>
@@ -122,3 +121,9 @@
     </ng-template>
   </div>
 </div>
+
+<ng-template #buttonColumnTemplate let-row="row" let-value="value" let-i="index">
+  <div class="text-right">
+    <a class="btn btn-sm btn-primary" [routerLink]="row.id + '/edit'"><i class="fa fa-pencil"></i> Edit</a>
+  </div>
+</ng-template>
