--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -92,7 +92,7 @@
               <span *ngIf="selectedMessage">
                 {{selectedCount.toLocaleString()}} {{selectedMessage}} /
               </span>
-              {{rowCount.toLocaleString()}} {{totalMessage}}
+              {{rowCount.toLocaleString()}} Items
               <span class="d-inline d-sm-none">
                 (Page {{ curPage }} of {{ ceil(rowCount / pageSize) }})
               </span>
