--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource.component.html
@@ -1,6 +1,6 @@
 <kiwi-content>
   <ng-template #headerButtons>
-    <button class="btn btn-success"><i class="fa fa-plus"></i> Create</button>
+    <a class="btn btn-success" routerLink="create"><i class="fa fa-plus"></i> Create</a>
   </ng-template>
 
   <ng-container *ngIf="dataUrl">
