--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -2,6 +2,14 @@
   padding: 0 25px;
 }
 
+.custom-card-header {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  min-height: 52px;
+  display: flex;
+  align-items: center;
+}
+
 .app-footer {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -118,6 +126,21 @@
   }
 
   .pagination {
+    margin-bottom: 0;
+  }
+}
+
+.kiwi-form {
+  label {
+    margin-bottom: 0.1rem;
+    font-size: .9em;
+  }
+
+  .form-group {
+    margin-bottom: .5rem;
+  }
+
+  formly-field:last-child .form-group {
     margin-bottom: 0;
   }
 }
