--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -146,3 +146,12 @@
     margin-bottom: 0;
   }
 }
+
+.modal-content {
+  border: 0;
+
+  .modal-header {
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem;
+  }
+}
