--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-confirm-modal/kiwi-confirm-modal.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-confirm-modal/kiwi-confirm-modal.component.html
@@ -3,6 +3,10 @@
 </div>
 <div class="modal-body" [innerHtml]="text"></div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-{{ confirmBtnType }}" (click)="confirm()"><i class="{{ confirmBtnIcon }}"></i> {{ confirmBtnTitle }}</button>
-  <button type="button" class="btn btn-secondary" (click)="bsModalRef.hide()">{{ cancelBtnTitle }}</button>
+  <button type="button" class="btn btn-{{ confirmBtnType }}" (click)="confirm()">
+    <i class="{{ confirmBtnIcon }}"></i> {{ confirmBtnTitle }}
+  </button>
+  <button type="button" class="btn btn-secondary" (click)="bsModalRef.hide()">
+    {{ cancelBtnTitle }}
+  </button>
 </div>
