added media input

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-media-list/kiwi-media-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-media-list/kiwi-media-list.component.html
@@ -31,10 +31,10 @@
               <progressbar class="progress-sm" [value]="item.progress" type="primary"></progressbar>
             </div>
             <div class="media-icon">
-              <span [class]="'file-icon fa fa-5x fa-fw ' + mimeTypeIcon(item?.file?.type)"></span>
+              <span [class]="'file-icon fa fa-5x fa-fw ' + mimeTypeIcon(item.file.type)"></span>
             </div>
             <div class="media-image-title p-1 text-nowrap text-truncate">
-              <div>{{ item?.file?.name }}</div>
+              <div>{{ item.file.name }}</div>
             </div>
           </div>
         </div>
