--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -147,6 +147,16 @@
   }
 }
 
+.modal-dialog.modal-empty {
+  .modal-content {
+    background: transparent;
+
+    .card {
+      margin-bottom: 0;
+    }
+  }
+}
+
 .modal-content {
   border: 0;
 
