--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -131,10 +131,10 @@
 }
 
 .kiwi-form {
-  margin-top: -.5rem;
+  margin-top: -.4rem;
 
   label {
-    margin-bottom: 0.1rem;
+    margin-bottom: 0;
     font-size: .9em;
   }
 
