--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -4,6 +4,7 @@
 // Import styles
 @import "~@coreui/coreui/scss/coreui";
 
+@import "~ngx-bootstrap/datepicker/bs-datepicker.css";
 @import '~@swimlane/ngx-datatable/release/index.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
 @import '~@swimlane/ngx-datatable/src/themes/bootstrap';
