fix login component styles

--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/ngx-admin.scss
@@ -20,7 +20,7 @@
 // Custom styles
 @import "custom";
 @import "content";
-@import "floating-labels";
+//@import "floating-labels";
 @import "loader";
 @import "media";
 @import "tree";
